# target-atlas

./: .gitignore  LICENSE  README.md  pyproject.toml
src/target_atlas/: state.py
src/target_atlas/agents/: input_parser.py  structure_agent.py
src/target_atlas/clients/: alphafold_client.py  chembl_client.py  pdb_client.py  pubmed_client.py  uniprot_client.py
