[project]
name = "target-atlas"
version = "0.1.0"
description = "Multi-agent system for automated protein target analysis"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "langgraph>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "hydra-core>=1.3.0",
    "mlflow>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
target-atlas = "target_atlas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/target_atlas"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]